entity_macros/tests/ui/attribute/conflicting-field-named-created.stderr
error: Conflicting field with same name
 --> $DIR/conflicting-field-named-created.rs:7:5
  |
7 |     created: usize,
  |     ^^^^^^^
